tests/errors/list_type_mismatch_subtraction.dang
# This should fail: mixing String and Int lists in subtraction
pub result = [] - ["foo"] - [3]